# shopify-ai-dashboard

./: .gitignore  README.md  ai_utils.py  app.py  clean_data.py  clean_report.json  clean_report.txt  data_processor.py  dirty_reasons.csv  dirty_report.txt  main.py  make_real_mess.py  pyproject.toml  requirements.txt  shopify_clean_data.csv  shopify_dirty_data.csv
