[project]
name = "shopify-command-center"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.1.2",
    "numpy>=2.4.1",
    "pandas>=2.2,<3",
    "plotly>=6.5.2",
    "requests>=2.32.5",
    "streamlit>=1.53.1",
]
